# chatbot

./: Dockerfile  README.md  main.py  pyproject.toml
frontend/: README.md
frontend/chatbot-frontend/: package-lock.json  package.json
frontend/chatbot-frontend/src/app/: page.tsx
frontend/chatbot-frontend/src/components/: Chat.tsx  ChatMessage.tsx
frontend/chatbot-frontend/src/services/: api.ts
frontend/chatbot-frontend/src/types/: chat.ts
