[project]
name = "chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Yannick Schwarz"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "llama-index (>=0.12.46,<0.13.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "azure-identity (>=1.23.0,<2.0.0)",
    "azure-keyvault-secrets (>=4.10.0,<5.0.0)",
    "azure-storage-blob (>=12.25.1,<13.0.0)",
    "openai (>=1.93.0,<2.0.0)",
    "langchain (>=0.3.26,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
